--- a/src/app/components/picture-detail/picture-detail.component.scss
+++ b/src/app/components/picture-detail/picture-detail.component.scss
@@ -7,8 +7,13 @@
   max-width: 80%;
 }
 
+.modal-body {
+  overflow-y: scroll;
+  height: 90%;
+}
+
 .vertical-ruler {
-  border-right: 1px solid grey;
+  border-left: 1px solid grey;
 }
 
 .btn-primary {
@@ -30,7 +35,16 @@ td {
   vertical-align: top;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   text-align: left;
+}
+
+.form-group {
+  margin-bottom: 5px;
+}
+
+.bildname {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
