--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.scss
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.scss
@@ -13,3 +13,11 @@
 .pricing-card .price h2:before {
   content: '€';
 }
+
+.indigo-gradient {
+  background: linear-gradient(80deg, #9dafff, rgb(104, 129, 253));
+}
+
+.indigo-gradient-2{
+  background: linear-gradient(50deg, rgb(104, 129, 253), #9dafff);
+}
