--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -5,7 +5,7 @@
     <!-- Navbar brand -->
     <logo>
       <a class="navbar-brand" routerLink="/" id="a_logo">
-        <img src="assets/logo.png" height="30" class="d-inline-block align-top" alt="logo"> Eventpicking
+        <img src="assets/logo.png" height="30" class="d-inline-block align-top" alt="logo"> EventPicKing
       </a>
     </logo>
 
