--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -26,7 +26,7 @@
                   hoch. Durch einen Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.
                 </p>
 
-                <a class="btn btn-primary btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <a class="btn btn-primary btn-sm ml-0 waves-light blue lighten-1" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
                 <br>
                 <br>
               </div>
