--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,12 +4,12 @@
     <div class="container" >
         <div class="row justify-content-center">
             <div class="col-6  text-center">
-                <h1>EventPickKing </h1>
+                <h1>EventPicKing </h1>
                 <br>
                 <h5>Willkommen bei ihrem Spezialisten für Event-Fotografie</h5>
                 <p>
-                    Finden sie einen Fotografen für ihr Event, kaufen sie schnell und bequem ihre Bilder online,
-                     oder registrieren sie sich als Fotograf um für Events gebucht zu werden!
+                    Finden Sie einen Fotografen für ihr Event, kaufen sie schnell und bequem ihre Bilder online,
+                     oder registrieren Sie sich als Fotograf, um für Events gebucht zu werden!
                 </p>
                 <p>
                 <button id="landing_signup" class="btn btn-outline-info btn-rounded waves-effec" routerLink="/signup">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
@@ -28,13 +28,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 text-center">
-                <h1>Description</h1>
+                <h1>Beschreibung</h1>
                     <div class="text">
-                        <p>Events ablegen, Bilder hochladen, teilen und verkaufen!</p>
+                        <p>Events anlegen, Bilder hochladen, teilen und verkaufen!</p>
                         <br>
-                        <p>Verkaufen sie unsere Fotos schnell über unser Portal. Wir kümmern uns um Zahlungsabwicklung, Produktion und Versand.</p>
+                        <p>Verkaufen Sie Ihre Fotos schnell über unser Portal. Wir kümmern uns um Zahlungsabwicklung, Produktion und Versand.</p>
                         <br>
-                        <p>Sie machen die Bilder und wir den Rest!</p>
+                        <p>Sie machen die Bilder - wir den Rest!</p>
                     </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
     <div class="container">
             <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
             <p class="text-center">
-                Professionelle Bilder von Professionellen Fotografen. Finden Auch sie den perfekten Fotografen für ihr Event!
+                Professionelle Bilder von professionellen Fotografen. Finden auch Sie den perfekten Fotografen für ihr Event!
             </p>
      </div>  <!-- end-container -->
      <div class="container card">
@@ -191,8 +191,8 @@
 <div id="testimonial" class="testimonial">
         <div class="container">
                 <h2>{{'LABELS.TESTIMONIALS'|translate}}</h2>
-                <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen sie und garantieren maximale Zufriedenheit.
-                    Überzeugen sie sich selbst!
+                <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen Sie und schaffen große Zufriedenheit.
+                    Überzeugen Sie sich selbst!
                 </p>
             <div class="row">
                 <div class="col-md-4 mb-r">
@@ -201,7 +201,7 @@
                      </div>
                     <h4 class="mb-3">Stephan Naumann</h4>
                     <h6 class="mb-3 font-bold grey-text">{{'LABELS.PHOTOGRAPHER'|translate}}</h6>
-                    <p><i class="fa fa-quote-left"></i>„Super Website um Kunden zu erreichen. Preis- Leistungsverhältnis von EventPicKing TOP. Werde
+                    <p><i class="fa fa-quote-left"></i>&nbsp;Super Website, um Kunden zu erreichen. Preis- Leistungsverhältnis von EventPicKing TOP. Werde
                         weitere Zusammenarbeit gerne beibehalten.
                     <i class="fa fa-quote-right"></i></p>
                     <div class="orange-text" style="margin-top: 30px">
@@ -209,6 +209,7 @@
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
+                        <i class="fa fa-star-o"></i>
                     </div><!--review1-end-->
                 </div> <!--col1-end-->
 
@@ -218,7 +219,7 @@
                     </div>
                         <h4 class="mb-3">Leonie Dürr</h4>
                         <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_ORGANISATOR'|translate}}</h6>
-                        <p><i class="fa fa-quote-left"></i>Traumhaft schöne Bilder unserer Hochzeit, die uns ein Leben lang begleiten werden. Vielen Dank für
+                        <p><i class="fa fa-quote-left"></i>&nbsp;Traumhaft schöne Bilder unserer Hochzeit, die uns ein Leben lang begleiten werden! Vielen Dank für
                             die professionelle Begleitung von unserem großen Tag. Fotografensuche ist benutzerfreundlich und
                             leicht zu bedienen. EventPicKing zu 100% empfehlenswert.
                         <i class="fa fa-quote-right"></i></p>
@@ -237,8 +238,8 @@
                         </div>
                             <h4 class="mb-3">Marianne Faust</h4>
                             <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_GUEST'|translate}}</h6>
-                            <p><i class="fa fa-quote-left"></i>Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach zu
-                                erwerben und gleich über eine (Wunsch)Druckerei druckbar. PayPal wird unterstützt.
+                            <p><i class="fa fa-quote-left"></i>&nbsp;Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach zu
+                                erwerben und gleich über eine (Wunsch-) Druckerei druckbar. Die Zahlung mit PayPal ist für mich ein Pluspunkt!
                             <i class="fa fa-quote-right"></i></p>
                             <div class="orange-text"  style="margin-top: 30px">
                                 <i class="fa fa-star"> </i>
