--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -34,7 +34,9 @@
         <!--Section: Pricing v.1-->
         <section class="section pb-3">
           <!--Section heading-->
-          <h1 class="section-heading h1 pt-4">Our pricing plans</h1>
+          <h1>Our pricing plans</h1>
+          <br>
+          <br>
 
 
           <div class="row">
@@ -43,9 +45,9 @@
 
               <div class="card pricing-card">
                 <!--Price-->
-                <div class="price header indigo">
+                <div class="price header indigo indigo-gradient">
                   <h1>25</h1>
-                  <div class="version">
+                  <div class="version indigo-gradient">
                     <h5>Basic</h5>
                   </div>
                 </div>
@@ -74,7 +76,7 @@
                   </div>
                   <hr>
 
-                  <button class="btn btn-indigo waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
                 </div>
                 <!--/.Features-->
 
@@ -85,9 +87,9 @@
             <div class="col-lg-4 col-md-6 mb-r">
               <div class="card pricing-card">
                 <!--Price-->
-                <div class="price header indigo">
+                <div class="price header indigo indigo-gradient-2">
                   <h1>35</h1>
-                  <div class="version">
+                  <div class="version indigo-gradient-2">
                     <h5>Smart</h5>
                   </div>
                 </div>
@@ -116,7 +118,7 @@
                   </div>
                   <hr>
 
-                  <button class="btn btn-indigo waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
                 </div>
                 <!--/.Features-->
 
@@ -126,9 +128,9 @@
             <div class="col-lg-4 col-md-6 mb-r">
               <div class="card pricing-card">
                 <!--Price-->
-                <div class="price header indigo">
+                <div class="price header indigo indigo-gradient">
                   <h1>50</h1>
-                  <div class="version">
+                  <div class="version indigo-gradient">
                     <h5>Pro</h5>
                   </div>
                 </div>
@@ -157,7 +159,7 @@
                   </div>
                   <hr>
 
-                  <button class="btn btn-indigo waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
                 </div>
                 <!--/.Features-->
 
@@ -351,7 +353,16 @@
             </mdb-item-body>
           </mdb-item>
         </mdb-squeezebox>
-        <button type="submit" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius (click)="updateProfile()">{{ 'BUTTONS.UPDATE_PROFILE' | translate }}</button>
+        <br>
+
+        <div class="row no-gutters justify-content-start" style="align-items: center">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <button type="submit" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updateProfile()">{{ 'BUTTONS.UPDATE_PROFILE' | translate }}</button>
+          </div>
+          <div class="col-4"></div>
+        </div>
+        
       </div>
     </div>
   </mdb-tab>
