refactored image firestore paths

--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -50,7 +50,7 @@
                 </h4>
                 <p class="grey-text">Sie suchen für Ihre Veranstaltung einen Fotograf in Ihrer Nähe? Wir bieten Ihnen die Möglichkeit über unser
                   Portal die besten Fotografen zu finden.</p>
-                <a class="btn btn-pink btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <a class="btn btn-pink btn-sm ml-0 waves-light" routerLink="/search" mdbRippleRadius>Mehr erfahren</a>
 
                 <br>
                 <br>
